--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,60 +8,9 @@
 	tools:context="com.vargo.geoff.gvnestable.MainActivity">
 
 	<LinearLayout
+		android:id="@+id/linnie"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="horizontal">
-		<TextView
-			android:id="@+id/blah"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:text="Hello World!"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintLeft_toLeftOf="parent"
-			app:layout_constraintRight_toRightOf="parent"
-			app:layout_constraintTop_toTopOf="parent"/>
-		<RelativeLayout
-			android:id="@+id/rl1"
-			android:layout_width="match_parent"
-			android:layout_height="match_parent"
-			android:layout_weight="1">
-
-			<TextView
-				android:id="@+id/textView11"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="TextView"/>
-			<RelativeLayout
-				android:id="@+id/rl2"
-				android:layout_width="match_parent"
-				android:layout_height="match_parent"
-				android:layout_centerHorizontal="false"
-				android:layout_centerInParent="true"
-				android:layout_marginHorizontal="2pt"
-				android:layout_marginVertical="2pt"
-				>
-
-				<TextView
-					android:id="@+id/textView12"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="TextView"/>
-				<RelativeLayout
-					android:id="@+id/rl3"
-					android:layout_width="match_parent"
-					android:layout_height="match_parent"
-					android:layout_marginHorizontal="2pt"
-					android:layout_marginVertical="2pt">
-
-					<TextView
-						android:id="@+id/textView13"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="TextView"/>
-				</RelativeLayout>
-			</RelativeLayout>
-		</RelativeLayout>
 	</LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
