--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,31 +12,61 @@
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
 		android:orientation="horizontal">
-		<RelativeLayout
+		<android.support.constraint.ConstraintLayout
 			android:id="@+id/rl0"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:clipChildren="false">
+			android:clipChildren="false"
+			>
 
 			<TextView
 				android:id="@+id/tv1"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_below="@+id/rl1"
-				android:text="TextView"/>
-			<RelativeLayout
+				android:text="TextView"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintStart_toStartOf="parent"/>
+			<android.support.constraint.ConstraintLayout
 				android:id="@+id/rl1"
 				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_toRightOf="@id/tv1">
+				android:layout_height="0dp"
+				android:clipChildren="false"
+				android:clipToPadding="false"
+				app:layout_constraintLeft_toRightOf="@+id/tv1"
+				app:layout_constraintTop_toTopOf="parent">
 
 				<TextView
 					android:id="@+id/tv2"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:text="TextView"
-					android:textSize="8sp"/>
-			</RelativeLayout>
-		</RelativeLayout>
+					android:textSize="8sp"
+					app:layout_constraintTop_toTopOf="parent"/>
+			</android.support.constraint.ConstraintLayout>
+		</android.support.constraint.ConstraintLayout>
+		<android.support.constraint.ConstraintLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content">
+
+			<TextView
+				android:id="@+id/textView5"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="TextView"
+				app:layout_constraintTop_toTopOf="parent"/>
+			<android.support.constraint.ConstraintLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				app:layout_constraintTop_toBottomOf="@+id/textView5">
+
+				<TextView
+					android:id="@+id/textView6"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:text="TextView"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintTop_toTopOf="parent"/>
+			</android.support.constraint.ConstraintLayout>
+		</android.support.constraint.ConstraintLayout>
 	</LinearLayout>
 </android.support.constraint.ConstraintLayout>
