--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -68,5 +68,36 @@
 					app:layout_constraintTop_toTopOf="parent"/>
 			</android.support.constraint.ConstraintLayout>
 		</android.support.constraint.ConstraintLayout>
+		<android.support.constraint.ConstraintLayout
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content">
+
+			<TextView
+				android:id="@+id/textView7"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="TextView"/>
+			<android.support.constraint.ConstraintLayout
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				app:layout_constraintTop_toBottomOf="@+id/textView7">
+
+				<android.support.constraint.ConstraintLayout
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content">
+
+					<TextView
+						android:id="@+id/textView8"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="TextView"/>
+					<android.support.constraint.ConstraintLayout
+						android:layout_width="0dp"
+						android:layout_height="0dp">
+
+					</android.support.constraint.ConstraintLayout>
+				</android.support.constraint.ConstraintLayout>
+			</android.support.constraint.ConstraintLayout>
+		</android.support.constraint.ConstraintLayout>
 	</LinearLayout>
 </android.support.constraint.ConstraintLayout>
