--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,32 +16,40 @@
 			android:id="@+id/rl0"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:clipChildren="false"
-			>
-
+			android:clipChildren="false">
 			<TextView
 				android:id="@+id/tv1"
 				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
+				android:layout_height="19dp"
 				android:text="TextView"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintStart_toStartOf="parent"/>
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent"/>
 			<android.support.constraint.ConstraintLayout
 				android:id="@+id/rl1"
 				android:layout_width="wrap_content"
-				android:layout_height="0dp"
+				android:layout_height="wrap_content"
 				android:clipChildren="false"
 				android:clipToPadding="false"
 				app:layout_constraintLeft_toRightOf="@+id/tv1"
 				app:layout_constraintTop_toTopOf="parent">
 
-				<TextView
-					android:id="@+id/tv2"
+				<android.support.constraint.ConstraintLayout
 					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="TextView"
-					android:textSize="8sp"
-					app:layout_constraintTop_toTopOf="parent"/>
+					android:layout_height="wrap_content">
+
+					<TextView
+						android:id="@+id/tv2"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:text="TextView"
+						android:textSize="8sp"
+						app:layout_constraintTop_toTopOf="parent"/>
+					<android.support.constraint.ConstraintLayout
+						android:layout_width="0dp"
+						android:layout_height="0dp">
+
+					</android.support.constraint.ConstraintLayout>
+				</android.support.constraint.ConstraintLayout>
 			</android.support.constraint.ConstraintLayout>
 		</android.support.constraint.ConstraintLayout>
 		<android.support.constraint.ConstraintLayout
