--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -53,57 +53,45 @@
 			</android.support.constraint.ConstraintLayout>
 		</android.support.constraint.ConstraintLayout>
 		<android.support.constraint.ConstraintLayout
+			android:id="@+id/cl4"
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content">
 
 			<TextView
-				android:id="@+id/textView5"
+				android:id="@+id/textView3"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:text="TextView"
-				app:layout_constraintTop_toTopOf="parent"/>
+				android:fontFamily="@font/untitled1"
+				android:text="ABBB"
+				android:textSize="24sp"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintLeft_toLeftOf="parent"/>
 			<android.support.constraint.ConstraintLayout
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				app:layout_constraintTop_toBottomOf="@+id/textView5">
-
-				<TextView
-					android:id="@+id/textView6"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:text="TextView"
-					app:layout_constraintBottom_toBottomOf="parent"
-					app:layout_constraintTop_toTopOf="parent"/>
-			</android.support.constraint.ConstraintLayout>
-		</android.support.constraint.ConstraintLayout>
-		<android.support.constraint.ConstraintLayout
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
-
-			<TextView
-				android:id="@+id/textView7"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="TextView"/>
-			<android.support.constraint.ConstraintLayout
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				app:layout_constraintTop_toBottomOf="@+id/textView7">
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				>
 
 				<android.support.constraint.ConstraintLayout
 					android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+					android:layout_height="wrap_content"
+					android:clipChildren="false"
+					android:clipToPadding="false"
+					app:layout_constraintBaseline_toBaselineOf="parent">
 
 					<TextView
-						android:id="@+id/textView8"
+						android:id="@+id/textView4"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:text="TextView"/>
-					<android.support.constraint.ConstraintLayout
-						android:layout_width="0dp"
-						android:layout_height="0dp">
-
-					</android.support.constraint.ConstraintLayout>
+						android:paddingBottom="2dp"
+						android:paddingLeft="4dp"
+						android:text="TextView"
+						android:textAlignment="textEnd"
+						android:textSize="14sp"
+						app:layout_constraintBottom_toBottomOf="parent"
+						app:layout_constraintEnd_toEndOf="parent"
+						app:layout_constraintLeft_toLeftOf="parent"/>
 				</android.support.constraint.ConstraintLayout>
 			</android.support.constraint.ConstraintLayout>
 		</android.support.constraint.ConstraintLayout>
