--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,25 +55,29 @@
 		<android.support.constraint.ConstraintLayout
 			android:id="@+id/cl4"
 			android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
+			android:layout_height="wrap_content"
+			android:clipChildren="true">
 
 			<TextView
 				android:id="@+id/textView3"
-				android:layout_width="wrap_content"
+				android:layout_width="0dp"
 				android:layout_height="wrap_content"
 				android:fontFamily="@font/untitled1"
 				android:text="ABBB"
 				android:textSize="24sp"
 				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintLeft_toLeftOf="parent"/>
+				app:layout_constraintLeft_toLeftOf="parent"
+				/>
 			<android.support.constraint.ConstraintLayout
+				android:id="@+id/cl5"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
+				android:layout_marginLeft="12sp"
 				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintEnd_toEndOf="parent"
-				>
+				app:layout_constraintLeft_toLeftOf="parent">
 
 				<android.support.constraint.ConstraintLayout
+					android:id="@+id/cl6"
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:clipChildren="false"
@@ -84,10 +88,9 @@
 						android:id="@+id/textView4"
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
-						android:paddingBottom="2dp"
-						android:paddingLeft="4dp"
+						android:paddingLeft="6dp"
 						android:text="TextView"
-						android:textAlignment="textEnd"
+						android:textAlignment="textStart"
 						android:textSize="14sp"
 						app:layout_constraintBottom_toBottomOf="parent"
 						app:layout_constraintEnd_toEndOf="parent"
