--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
 		android:id="@+id/linnie"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:orientation="horizontal">
+		android:orientation="horizontal"
+		android:padding="4dp">
 		<android.support.constraint.ConstraintLayout
 			android:id="@+id/rl0"
 			android:layout_width="wrap_content"
