--- a/nestabletextview/src/main/res/drawable/ic_sqrtophead.xml
+++ b/nestabletextview/src/main/res/drawable/ic_sqrtophead.xml
@@ -5,15 +5,26 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
         android:width="24dp"
         android:height="34dp"
-        android:viewportHeight="34.4"
-        android:viewportWidth="24.1">
+        android:viewportWidth="24.1"
+        android:viewportHeight="34.4">
 	<group
 		android:scaleX="0.25"
 		android:scaleY="0.25">
 		<path
 			android:fillColor="#FF000000"
-			android:pathData=   "M 110.6 22.1, h -25, c 0 0 -45.8 95 -46.1 95.6, c -0.1 0.3 -0.5 1.2 -1 2.1, c -0.5 1 -0.9 2-2.5 1.9, c -1.5
-								-0.1 -1.4 -0.3 -1.9 -0.9l -20.8 -45.5, l -6.8 4.5, l -1 -1.4, l 13.6 -10.6, l 19.4 42.9, l 44.2 -92.7, h 28, L 110.6 22.1z"/>
+			android:pathData=  "M 110.6 22.1,
+								h -25 0,
+								c 0 0 -35.8 75 -36.1 75.6,
+								c 0 0 -0.5 1.2 -1 2.1,
+								c 0 0 -0.9 2 -2.5 1.9,
+								c 0 0 -1.4 -0.3 -1.9 -0.9l -20.8 -35.5,
+								l -6.8 4.5,
+								l -1 -1.4,
+								l 12 -10.6,
+								l 19.4 32.9,
+								l 34.2 -72.7,
+								h 25,
+								L 110.6 22.1z"/>
 	</group>
 
 </vector>
