--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,156 +19,156 @@
 		android:padding="4dp"
 		app:layout_constraintLeft_toLeftOf="parent"
 		app:layout_constraintTop_toTopOf="parent">
-		<android.support.constraint.ConstraintLayout
-			android:id="@+id/rl0"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:clipChildren="false">
-			<TextView
-				android:id="@+id/tv1"
-				android:layout_width="wrap_content"
-				android:layout_height="19dp"
-				android:text="TextView"
-				app:layout_constraintStart_toStartOf="parent"
-				app:layout_constraintTop_toTopOf="parent"/>
-			<android.support.constraint.ConstraintLayout
-				android:id="@+id/rl1"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:clipChildren="false"
-				android:clipToPadding="false"
-				app:layout_constraintLeft_toRightOf="@+id/tv1"
-				app:layout_constraintTop_toTopOf="parent">
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:id="@+id/rl0"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:clipChildren="false">-->
+		<!--<TextView-->
+		<!--android:id="@+id/tv1"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="19dp"-->
+		<!--android:text="TextView"-->
+		<!--app:layout_constraintStart_toStartOf="parent"-->
+		<!--app:layout_constraintTop_toTopOf="parent"/>-->
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:id="@+id/rl1"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:clipChildren="false"-->
+		<!--android:clipToPadding="false"-->
+		<!--app:layout_constraintLeft_toRightOf="@+id/tv1"-->
+		<!--app:layout_constraintTop_toTopOf="parent">-->
 
-				<android.support.constraint.ConstraintLayout
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content">
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content">-->
 
-					<TextView
-						android:id="@+id/tv2"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:text="TextView"
-						android:textSize="8sp"
-						app:layout_constraintTop_toTopOf="parent"/>
-					<android.support.constraint.ConstraintLayout
-						android:layout_width="0dp"
-						android:layout_height="0dp">
+		<!--<TextView-->
+		<!--android:id="@+id/tv2"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:text="TextView"-->
+		<!--android:textSize="8sp"-->
+		<!--app:layout_constraintTop_toTopOf="parent"/>-->
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:layout_width="0dp"-->
+		<!--android:layout_height="0dp">-->
 
-					</android.support.constraint.ConstraintLayout>
-				</android.support.constraint.ConstraintLayout>
-			</android.support.constraint.ConstraintLayout>
-		</android.support.constraint.ConstraintLayout>
-		<android.support.constraint.ConstraintLayout
-			android:id="@+id/cl4"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:clipChildren="true">
+		<!--</android.support.constraint.ConstraintLayout>-->
+		<!--</android.support.constraint.ConstraintLayout>-->
+		<!--</android.support.constraint.ConstraintLayout>-->
+		<!--</android.support.constraint.ConstraintLayout>-->
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:id="@+id/cl4"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:clipChildren="true">-->
 
-			<TextView
-				android:id="@+id/textView3"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:fontFamily="@font/untitled1"
-				android:singleLine="true"
-				android:text="ABBBBBBBBBBBBBBBBB"
-				android:textSize="24sp"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintLeft_toLeftOf="parent"/>
-			<android.support.constraint.ConstraintLayout
-				android:id="@+id/cl5"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginLeft="12sp"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintLeft_toLeftOf="parent">
+		<!--<TextView-->
+		<!--android:id="@+id/textView3"-->
+		<!--android:layout_width="0dp"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:fontFamily="@font/untitled1"-->
+		<!--android:singleLine="true"-->
+		<!--android:text="ABBBBBBBBBBBBBBBBB"-->
+		<!--android:textSize="24sp"-->
+		<!--app:layout_constraintBottom_toBottomOf="parent"-->
+		<!--app:layout_constraintLeft_toLeftOf="parent"/>-->
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:id="@+id/cl5"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:layout_marginLeft="12sp"-->
+		<!--app:layout_constraintBottom_toBottomOf="parent"-->
+		<!--app:layout_constraintLeft_toLeftOf="parent">-->
 
-				<android.support.constraint.ConstraintLayout
-					android:id="@+id/cl6"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:clipChildren="false"
-					android:clipToPadding="false"
-					app:layout_constraintBaseline_toBaselineOf="parent">
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:id="@+id/cl6"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:clipChildren="false"-->
+		<!--android:clipToPadding="false"-->
+		<!--app:layout_constraintBaseline_toBaselineOf="parent">-->
 
-					<TextView
-						android:id="@+id/textView4"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:paddingLeft="6dp"
-						android:text="TextViewasdfasdf"
-						android:textAlignment="textStart"
-						android:textSize="14sp"
-						app:layout_constraintBottom_toBottomOf="parent"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintLeft_toLeftOf="parent"/>
-				</android.support.constraint.ConstraintLayout>
-			</android.support.constraint.ConstraintLayout>
-		</android.support.constraint.ConstraintLayout>
-		<android.support.constraint.ConstraintLayout
-			android:id="@+id/cl7"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:clipChildren="true">
+		<!--<TextView-->
+		<!--android:id="@+id/textView4"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:paddingLeft="6dp"-->
+		<!--android:text="TextViewasdfasdf"-->
+		<!--android:textAlignment="textStart"-->
+		<!--android:textSize="14sp"-->
+		<!--app:layout_constraintBottom_toBottomOf="parent"-->
+		<!--app:layout_constraintEnd_toEndOf="parent"-->
+		<!--app:layout_constraintLeft_toLeftOf="parent"/>-->
+		<!--</android.support.constraint.ConstraintLayout>-->
+		<!--</android.support.constraint.ConstraintLayout>-->
+		<!--</android.support.constraint.ConstraintLayout>-->
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:id="@+id/cl7"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:clipChildren="true">-->
 
-			<ImageView
-				android:id="@+id/imageView"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:adjustViewBounds="false"
-				android:cropToPadding="false"
-				app:srcCompat="@drawable/ic_sqrtophead"/>
-			<ImageView
-				android:id="@+id/imageView4"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:adjustViewBounds="false"
-				android:scaleType="fitXY"
-				app:layout_constraintHorizontal_chainStyle="spread_inside"
-				app:layout_constraintLeft_toRightOf="@+id/imageView"
-				app:layout_constraintRight_toRightOf="@+id/cl8"
-				app:srcCompat="@drawable/ic_sqrtoptail"/>
-			<TextView
-				android:id="@+id/tv5"
-				android:layout_width="0dp"
-				android:layout_height="wrap_content"
-				android:fontFamily="@font/untitled1"
-				android:singleLine="true"
-				android:textSize="24sp"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintLeft_toLeftOf="parent"/>
-			<android.support.constraint.ConstraintLayout
-				android:id="@+id/cl8"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_marginBottom="8dp"
-				app:layout_constraintBottom_toBottomOf="parent"
-				app:layout_constraintRight_toRightOf="parent">
+		<!--<ImageView-->
+		<!--android:id="@+id/imageView"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:adjustViewBounds="false"-->
+		<!--android:cropToPadding="false"-->
+		<!--app:srcCompat="@drawable/ic_sqrtophead"/>-->
+		<!--<ImageView-->
+		<!--android:id="@+id/imageView4"-->
+		<!--android:layout_width="0dp"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:adjustViewBounds="false"-->
+		<!--android:scaleType="fitXY"-->
+		<!--app:layout_constraintHorizontal_chainStyle="spread_inside"-->
+		<!--app:layout_constraintLeft_toRightOf="@+id/imageView"-->
+		<!--app:layout_constraintRight_toRightOf="@+id/cl8"-->
+		<!--app:srcCompat="@drawable/ic_sqrtoptail"/>-->
+		<!--<TextView-->
+		<!--android:id="@+id/tv5"-->
+		<!--android:layout_width="0dp"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:fontFamily="@font/untitled1"-->
+		<!--android:singleLine="true"-->
+		<!--android:textSize="24sp"-->
+		<!--app:layout_constraintBottom_toBottomOf="parent"-->
+		<!--app:layout_constraintLeft_toLeftOf="parent"/>-->
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:id="@+id/cl8"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:layout_marginBottom="8dp"-->
+		<!--app:layout_constraintBottom_toBottomOf="parent"-->
+		<!--app:layout_constraintRight_toRightOf="parent">-->
 
-				<android.support.constraint.ConstraintLayout
-					android:id="@+id/cl9"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginStart="16dp"
-					android:clipChildren="false"
-					android:clipToPadding="false"
-					app:layout_constraintBaseline_toBaselineOf="parent"
-					app:layout_constraintStart_toStartOf="parent">
+		<!--<android.support.constraint.ConstraintLayout-->
+		<!--android:id="@+id/cl9"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:layout_marginStart="16dp"-->
+		<!--android:clipChildren="false"-->
+		<!--android:clipToPadding="false"-->
+		<!--app:layout_constraintBaseline_toBaselineOf="parent"-->
+		<!--app:layout_constraintStart_toStartOf="parent">-->
 
-					<TextView
-						android:id="@+id/tv6"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:paddingLeft="6dp"
-						android:text="TextViewasdfasdf"
-						android:textAlignment="textStart"
-						android:textSize="14sp"
-						app:layout_constraintBottom_toBottomOf="parent"
-						app:layout_constraintEnd_toEndOf="parent"
-						app:layout_constraintLeft_toLeftOf="parent"/>
-				</android.support.constraint.ConstraintLayout>
-			</android.support.constraint.ConstraintLayout>
-		</android.support.constraint.ConstraintLayout>
+		<!--<TextView-->
+		<!--android:id="@+id/tv6"-->
+		<!--android:layout_width="wrap_content"-->
+		<!--android:layout_height="wrap_content"-->
+		<!--android:paddingLeft="6dp"-->
+		<!--android:text="TextViewasdfasdf"-->
+		<!--android:textAlignment="textStart"-->
+		<!--android:textSize="14sp"-->
+		<!--app:layout_constraintBottom_toBottomOf="parent"-->
+		<!--app:layout_constraintEnd_toEndOf="parent"-->
+		<!--app:layout_constraintLeft_toLeftOf="parent"/>-->
+		<!--</android.support.constraint.ConstraintLayout>-->
+		<!--</android.support.constraint.ConstraintLayout>-->
+		<!--</android.support.constraint.ConstraintLayout>-->
 	</LinearLayout>
 	<LinearLayout
 		android:id="@+id/linnie2"
