Refactored 'text' field in NestableTextView, renaming it 'expr'.
Started adapting SQRT to be truly nestable (SQRT within SQRT).

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
 		<!--android:layout_height="wrap_content"-->
 		<!--android:fontFamily="@font/untitled1"-->
 		<!--android:singleLine="true"-->
-		<!--android:text="ABBBBBBBBBBBBBBBBB"-->
+		<!--android:expr="ABBBBBBBBBBBBBBBBB"-->
 		<!--android:textSize="24sp"-->
 		<!--app:layout_constraintBottom_toBottomOf="parent"-->
 		<!--app:layout_constraintLeft_toLeftOf="parent"/>-->
@@ -56,7 +56,7 @@
 		<!--android:layout_width="wrap_content"-->
 		<!--android:layout_height="wrap_content"-->
 		<!--android:paddingLeft="6dp"-->
-		<!--android:text="TextViewasdfasdf"-->
+		<!--android:expr="TextViewasdfasdf"-->
 		<!--android:textAlignment="textStart"-->
 		<!--android:textSize="14sp"-->
 		<!--app:layout_constraintBottom_toBottomOf="parent"-->
@@ -120,7 +120,7 @@
 		<!--android:layout_width="wrap_content"-->
 		<!--android:layout_height="wrap_content"-->
 		<!--android:paddingLeft="6dp"-->
-		<!--android:text="TextViewasdfasdf"-->
+		<!--android:expr="TextViewasdfasdf"-->
 		<!--android:textAlignment="textStart"-->
 		<!--android:textSize="14sp"-->
 		<!--app:layout_constraintBottom_toBottomOf="parent"-->
@@ -196,7 +196,7 @@
 						<!--android:layout_height="wrap_content"-->
 						<!--android:paddingLeft="6dp"-->
 						<!--android:paddingRight="4dp"-->
-						<!--android:text="TextViewsdaf"-->
+		<!--android:expr="TextViewsdaf"-->
 						<!--android:textSize="36sp"-->
 						<!--app:layout_constraintBottom_toBottomOf="parent"-->
 						<!--app:layout_constraintEnd_toEndOf="parent"-->
